fix spacing in elements

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,9 @@
     /* Fonts */
     --ff-title: "Chakra Petch", sans-serif;
     --ff-base: "B612 Mono", monospace;
+
+    --fs-small: 0.7rem;
+    --fs-regular: 0.9rem;
 }
 
 /* General styling*/
@@ -95,16 +98,17 @@ h6 {
 }
 
 .input-group {
-    display: flex;
-    flex-direction: column;
+    width: 35rem;
+    padding: 3.4rem 2.8rem;
     background-color: #010e0cd6;
     border: 2px dashed #ffbc19;
-    padding: 2.4rem 1.8rem;
+    display: flex;
+    flex-direction: column;
 }
 .input-group__text-area {
     background-color: #010e0cad;
     height: 25rem;
-    padding: 0.2rem 0.5rem;
+    padding: 0.8rem 1.1rem;
     color: var(--clr-text);
     outline: none;
     border-radius: 8px;
@@ -134,12 +138,12 @@ h6 {
     display: flex;
     align-items: center;
     gap: 0.4rem;
-    font-size: 0.7rem;
+    font-size: var(--fs-small);
     font-weight: 400;
 }
 .input-group__btn-group {
     display: flex;
-    gap: 3rem;
+    justify-content: space-evenly;
     margin-top: 1rem;
 }
 .input-group__btn {
@@ -147,10 +151,10 @@ h6 {
     justify-content: center;
     align-items: center;
     gap: 0.7rem;
-    padding: 0.9rem 0.8rem;
+    padding: 0.6rem 0;
     width: 10rem;
     border-radius: 8px;
-    border: 2px solid #92e8e0;
+    border: 2px solid var(--clr-accent);
     background-color: #ffbe1967;
     font-family: var(--ff-title);
     color: var(--clr-text);
@@ -163,13 +167,14 @@ h6 {
     cursor: pointer;
 }
 .output-group {
+    width: 35rem;
+    padding: 3.4rem 2.8rem;
     background-color: #010e0cd6;
     border: 2px dashed #ffbc19;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 2.4rem 1.8rem;
 }
 .output-group_btn {
     background: none;
@@ -198,7 +203,7 @@ h6 {
 .footer__link {
     color: var(--clr-text);
     text-decoration: none;
-    font-size: 0.9rem;
+    font-size: var(--fs-regular);
     font-weight: 600;
 }
 .footer__link:hover {
@@ -207,6 +212,6 @@ h6 {
 }
 
 .footer__link-group .footer__link {
-    font-size: 0.7rem;
+    font-size: var(--fs-small);
     font-weight: 400;
 }
